--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitación de Boda - Melissa y Joel</title>
+    <title>Invitación de Boda - Mayté y Daniel</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
                 <div class="names">
                     <!-- <div class="name">MELISSA</div> -->
                     <div class="carousel-container">
-                        <div class="photo-placeholder carousel-item left" style="background-image: url('img/May3.jpeg')"></div>
+                        <div class="photo-placeholder carousel-item left" style="background-image: url('img/May10.jpeg')"></div>
                         <div class="photo-placeholder carousel-item center" style="background-image: url('img/May2.jpeg')"></div>
                         <div class="photo-placeholder carousel-item right" style="background-image: url('img/May4.jpeg')"></div>
                     </div>
