--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
 
-                 <div class= "frase fade-in">“Que tal si todos mis caminos llevan al mismo destino y nuestro amor creía en nosotros desde antes”</div>
+                <!--   <div class= "frase fade-in">“Que tal si todos mis caminos llevan al mismo destino y nuestro amor creía en nosotros desde antes”</div> -->
 
             </div>
     </div>
